--- a/src/Trace/views/achievement/medal/modify.html
+++ b/src/Trace/views/achievement/medal/modify.html
@@ -177,7 +177,7 @@
                     <div class="tabbable-line">
                         <ul class="nav nav-tabs">
                             <li style="float: right" class="active">
-                                <a data-toggle="tab" ng-click="vm.choose()" aria-expanded="true">+添加成就</a>
+                                <a data-toggle="tab" ng-click="vm.choose()" aria-expanded="true">添加</a>
                             </li>
                         </ul>
                         <div class="tab-content">
