--- a/src/Trace/views/onlinemall/figure/index.html
+++ b/src/Trace/views/onlinemall/figure/index.html
@@ -19,24 +19,15 @@
     </div>
     <div class="portlet light bordered">
         <div class="row">
-                <div class="col-xs-6">
+            
+                <div class="col-xs-7">
                     <div class="form-group form-md-line-input">
-                        <label class="col-md-4 control-label">状态</label>
-                        <div class="col-md-8">
-                            <select ng-model="vm.table.filter.state"  class="form-control edited" ui-validate="'$value>0'"
-                                    ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.states"></select>
-                            <div class="form-control-focus"> </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6">
-                    <div class="form-group form-md-line-input has-info">
                         <div class="input-group input-group-sm">
                             <div class="input-group-control">
                                 <input type="text" class="form-control input-sm" placeholder="轮播图名称" ng-model="vm.table.filter.name">
                             </div>
                             <span class="input-group-btn btn-right">
-                                <button ng-click="vm.init()" class="btn green-haze" type="button">Go!</button>
+                                <button ng-click="vm.init()" class="btn green-haze" type="button">搜索</button>
                             </span>
                         </div>
                     </div>
@@ -45,10 +36,10 @@
 
         </div>
         <div class="row">
-            <table st-table="vm.table.data" class="table table-striped">
+            <table st-table="vm.table.rows" class="table table-striped">
                 <thead>
                     <tr>
-                        <th st-sort="a">产品名称</th>
+                        <th st-sort="a">轮播图</th>
                         <th>创建时间</th>
                         <th>创建人</th>
                         <th>权重</th>
@@ -58,20 +49,18 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.data">
-                        <td>{{row.a}}</td>
-                        <td>{{row.b}}</td>
-                        <td>{{row.c}}</td>
-                        <td>{{row.balance}}</td>
-                        <td>{{row.email}}</td>
-                        <td>{{row.email}}</td>
+                    <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.rows">
+                        <td>{{row.shuffling_name}}</td>
+                        <td>{{row.online_time}}</td>
+                        <td>{{row.create_by}}</td>
+                        <td>{{row.weight}}</td>
+                        <td>{{row.is_deleted}}</td>
+                        <td>{{row.url}}</td>
                         <td>
                             <a href="#"  ng-click="vm.edit(row)" >
                                 修改
                             </a>
-                            <a href="#"  ng-click="vm.low(row)" >
-                                下线
-                            </a>
+                          
                             <a href="#"  ng-click="vm.delete(row)" >
                                 删除
                             </a>
