--- a/src/Trace/views/onlinemall/banner/index.html
+++ b/src/Trace/views/onlinemall/banner/index.html
@@ -1,10 +1,10 @@
-﻿<div ng-controller="views.onlinemall.figure.index as vm">
+﻿<div ng-controller="views.onlinemall.banner.index as vm">
     <div class="page-bar">
         <div class="col-xs-8">
             <ul class="page-breadcrumb">
                 <li>
                     <i class="fa fa-hand-o-right"></i>
-                    <a href="#">Banner图管理</a>
+                    <a href="#">banner管理</a>
                 </li>
             </ul>
         </div>
@@ -13,65 +13,58 @@
                 <li>
                     <button class="btn btn-sm blue" ng-click="vm.add()"><i class="fa fa-plus"></i> 添加</button>
                 </li>
+
             </ul>
         </div>
     </div>
     <div class="portlet light bordered">
         <div class="row">
-                <div class="col-xs-6">
-                    <div class="form-group form-md-line-input">
-                        <label class="col-md-4 control-label">状态</label>
-                        <div class="col-md-8">
-                            <select ng-model="vm.table.filter.state"  class="form-control edited" ui-validate="'$value>0'"
-                                    ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.states"></select>
-                            <div class="form-control-focus"> </div>
-                        </div>
-                    </div>
-                </div>
-            <div class="col-xs-6">
-                <div class="form-group form-md-line-input has-info">
+            <div class="col-xs-7">
+                <div class="form-group form-md-line-input">
                     <div class="input-group input-group-sm">
                         <div class="input-group-control">
-                            <input type="text" class="form-control input-sm" placeholder="按条件搜索" ng-model="vm.table.filter.name">
+                            <input type="text" class="form-control input-sm" placeholder="banner图名称" ng-model="vm.table.filter.name">
                         </div>
                         <span class="input-group-btn btn-right">
-                            <button ng-click="vm.init()" class="btn green-haze" type="button">Go!</button>
+                            <button ng-click="vm.init()" class="btn green-haze" type="button">搜索</button>
                         </span>
                     </div>
                 </div>
-
-             
             </div>
         </div>
         <div class="row">
-            <table st-table="vm.table.data" class="table table-striped">
+            <table st-table="vm.table.rows" class="table table-striped">
                 <thead>
                     <tr>
-                        <th st-sort="a">产品名称</th>
+                        <th st-sort="a">banner图</th>
                         <th>创建时间</th>
                         <th>创建人</th>
-                        <th>位置</th>
+                        <th>权重</th>
                         <th>状态</th>
                         <th>链接</th>
                         <th>操作</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.data">
-                        <td>{{row.a}}</td>
-                        <td>{{row.b}}</td>
-                        <td>{{row.c}}</td>
-                        <td>{{row.balance}}</td>
-                        <td>{{row.email}}</td>
-                        <td>{{row.email}}</td>
+                    <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.rows">
+                        <td>{{row.shuffling_name}}</td>
+                        <td>{{row.online_time}}</td>
+                        <td>{{row.create_by}}</td>
+                        <td>{{row.weight}}</td>
+                        <td>{{row.status}}</td>
+                        <td>{{row.is_deleted}}</td>
+                        <td>{{row.url}}</td>
                         <td>
-                            <a href="#"  ng-click="vm.modify(row)" >
+                            <a href="#" ng-click="vm.edit(row)">
                                 修改
                             </a>
-                            <a href="#"  ng-click="vm.low(row)" >
+                            <a ng-if="row.status==0" href="#" ng-click="vm.state(row,1)">
+                                上线
+                            </a>
+                            <a ng-if="row.status==1" href="#" ng-click="vm.state(row,0)">
                                 下线
                             </a>
-                            <a href="#"  ng-click="vm.delete(row)" >
+                            <a href="#" ng-click="vm.delete(row)">
                                 删除
                             </a>
                         </td>
