--- a/src/Trace/views/integralmall/index.html
+++ b/src/Trace/views/integralmall/index.html
@@ -28,9 +28,9 @@
                 <div class="form-group form-md-line-input">
                     <label class="col-md-4 control-label">状态</label>
                     <div class="col-md-8">
-                        <select ng-model="vm.table.filter.state"
+                        <select ng-model="vm.table.filter.status"
                                 class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                                ng-class="{'edited':vm.table.filter.status>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
                         <div class="form-control-focus"> </div>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
                     <label class="col-md-4 control-label">类型</label>
                     <div class="col-md-8">
                         <select ng-model="vm.table.filter.cate" class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.cates"></select>
+                                ng-class="{'edited':vm.table.filter.cate>0}" ng-options="m.id as m.name for m in vm.filter.cates"></select>
                         <div class="form-control-focus"> </div>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
 
         </div>
         <div class="row">
-            <table st-table="vm.table.data" class="table table-striped">
+            <table st-table="vm.table.rows" class="table table-striped">
                 <thead>
                     <tr>
                         <th st-sort="a">攻略名称</th>
@@ -73,23 +73,26 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.data">
-                        <td>{{row.a}}</td>
-                        <td>{{row.b}}</td>
-                        <td>{{row.c}}</td>
-                        <td>{{row.balance}}</td>
-                        <td>{{row.email}}</td>
-                        <td>{{row.email}}</td>
+                    <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.rows">
+                        <td>{{row.product_name}}</td>
+                        <td>{{row.online_time}}</td>
+                        <td>{{row.product_price}}</td>
+                        <td>{{row.inventory}}</td>
+                        <td>{{row.product_type==1?'实物':'虚拟'}}</td>
+                        <td>{{row.status==0?'下线':'上线'}}</td>
                         <td>
-                            <button type="button" ng-click="vm.modify(row)" class="btn btn-sm btn-default">
+                            <a href="#" ng-click="vm.edit(row)" >
                                 修改
-                            </button>
-                            <button type="button" ng-click="vm.low(row)" class="btn btn-sm btn-warning">
-                                下架
-                            </button>
-                            <button type="button" ng-click="vm.delete(row)" class="btn btn-sm btn-danger">
+                            </a>
+                            <a ng-if="row.status==0" href="#" ng-click="vm.update(row,1)" >
+                                上线
+                            </a>
+                            <a ng-if="row.status==1" href="#" ng-click="vm.update(row,0)">
+                                下线
+                            </a>
+                            <a  href="#" ng-click="vm.delete(row)" >
                                 删除
-                            </button>
+                            </a>
                         </td>
                     </tr>
                 </tbody>
