--- a/src/Trace/views/integralmall/modify.html
+++ b/src/Trace/views/integralmall/modify.html
@@ -3,8 +3,8 @@
         <ul class="page-breadcrumb">
             <li>
                 <i class="fa fa-hand-o-right"></i>
-                <a ng-if="!vm.activity.id" href="#">添加商品</a>
-                <a ng-if="vm.activity.id" href="#">编辑商品: {{vm.activity.title}}</a>
+                <a ng-if="!vm.product.id" href="#">添加商品</a>
+                <a ng-if="vm.product.id" href="#">编辑商品: {{vm.product.product_name}}</a>
             </li>
         </ul>
     </div>
@@ -16,8 +16,8 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-3 control-label">商品名称</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="商品名称"
-                                       required ng-model="vm.activity.title">
+                                <input type="text" class="form-control" ng-class="{'edited':vm.product.product_name}" placeholder="商品名称"
+                                       required ng-model="vm.product.product_name">
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
@@ -27,8 +27,8 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-3 control-label">商品种类</label>
                             <div class="col-md-9">
-                                <select ng-model="vm.activity.cate" class="form-control edited" ui-validate="'$value>0'"
-                                        ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.cates"></select>
+                                <select ng-model="vm.product.product_type" class="form-control edited" ui-validate="'$value>0'"
+                                        ng-class="{'edited':vm.product.product_type>0}" ng-options="m.id as m.name for m in vm.cates"></select>
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
@@ -39,8 +39,8 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-3 control-label">商品价格</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="商品价格"
-                                       required ng-model="vm.activity.title">
+                                <input type="text" class="form-control" ng-class="{'edited':vm.product.product_price}" placeholder="商品价格"
+                                       required ng-model="vm.product.product_price">
                             </div>
                         </div>
 
@@ -49,8 +49,8 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-3 control-label">商品库存</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="商品库存"
-                                       required ng-model="vm.activity.title">
+                                <input type="number" class="form-control" ng-class="{'edited':vm.product.inventory}" placeholder="商品库存"
+                                       required ng-model="vm.product.inventory">
                             </div>
                         </div>
 
@@ -66,13 +66,13 @@
                                    data-toggle="dropdown" data-target=".dropdown1-parent"
                                    href="#">
                                     <div class="input-group">
-                                        <input type="text" class="form-control" data-ng-model="vm.gift.date"
+                                        <input type="text" class="form-control" data-ng-model="vm.product.online_time"
                                                data-date-time-input="YYYY-MM-DD HH:mm">
                                         <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                     </div>
                                 </a>
                                 <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                                    <datetimepicker data-ng-model="vm.gift.date"
+                                    <datetimepicker data-ng-model="vm.product.online_time"
                                                     data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }"></datetimepicker>
                                 </ul>
                             </div>
@@ -83,26 +83,7 @@
                 <div class="row">
                     <div class="col-xs-6">
                         <div class="tiles">
-                            <div class="tile bg-blue-madison" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
-                                <div class="tile-body">
-                                    <i class="fa fa-cloud-upload"></i>
-                                </div>
-                                <div class="tile-object">
-                                    <div class="name"> 限制 </div>
-                                    <div class="number"> 150x150 </div>
-                                </div>
-                            </div>
-                            <ol>
-                                <li ng-repeat="(k,v) in vm.file.selectFiles">
-                                    {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
-                                </li>
-                            </ol>
-                        </div>
-                    </div>
-
-                    <div class="col-xs-6">
-                        <div class="tiles">
-                            <div class="tile bg-red-sunglo" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                            <div class="tile bg-grey" ng-file-select="vm.file.onFileSelect($files,1)" data-multiple="vm.file.multiple" onclick="this.value = null">
                                 <div class="tile-body">
                                     <i class="fa fa-cloud-upload"></i>
                                 </div>
@@ -111,11 +92,22 @@
                                     <div class="number"> 100x100 </div>
                                 </div>
                             </div>
-                            <ol>
-                                <li ng-repeat="(k,v) in vm.file.selectFiles">
-                                    {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
-                                </li>
-                            </ol>
+
+                        </div>
+                    </div>
+
+                    <div class="col-xs-6">
+                        <div class="tiles">
+                            <div class="tile bg-grey" ng-file-select="vm.file.onFileSelect($files,2)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                                <div class="tile-body">
+                                    <i class="fa fa-cloud-upload"></i>
+                                </div>
+                                <div class="tile-object">
+                                    <div class="name"> 限制 </div>
+                                    <div class="number"> 100x100 </div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -124,12 +116,13 @@
                     <div class="form-group form-md-line-input has-success">
                         <label class="col-md-2 control-label">商品简介</label>
                         <div class="col-md-10">
-                            <textarea class="form-control" rows="3" ng-class="{'edited':vm.activity.title}"
-                                      placeholder="商品简介" ng-model="vm.activity.title"></textarea>
+                            <textarea class="form-control" rows="3" ng-class="{'edited':vm.product.description}"
+                                      placeholder="商品简介" ng-model="vm.product.description"></textarea>
                         </div>
                     </div>
                 </div>
-                <div ueditor id="Container" config="{{vm.config }}"></div>
+                <ueditor config="editorConfig" ng-model="vm.product.content">
+                </ueditor>
             </div>
 
             <div class="modal-footer">
