--- a/src/Trace/views/trace/index.html
+++ b/src/Trace/views/trace/index.html
@@ -82,7 +82,7 @@
                         <td>{{row.url}}</td>
                         <td>{{row.image}}</td>
                         <td>
-                            <a href="#" ng-click="vm.edit(row)">
+                            <!--<a href="#" ng-click="vm.edit(row)">
                                 修改
                             </a>
                             <a ng-if="row.status==1" href="#" ng-click="vm.public(row,0)">
@@ -90,7 +90,7 @@
                             </a>
                             <a ng-if="row.status==0" href="#" ng-click="vm.public(row,1)">
                                 上线
-                            </a>
+                            </a>-->
                             <a href="#" ng-click="vm.delete(row)">
                                 删除
                             </a>
