--- a/src/Trace/views/postage/index.html
+++ b/src/Trace/views/postage/index.html
@@ -10,12 +10,12 @@
                 </ul>
             </div>
             <div class="col-xs-4 right">
-                <ul class="page-breadcrumb" style="float: right">
+                <!--<ul class="page-breadcrumb" style="float: right">
                     <li>
                         <button class="btn btn-sm blue" ng-click="vm.add()"><i class="fa fa-plus"></i> 添加</button>
                     </li>
 
-                </ul>
+                </ul>-->
             </div>
         </div>
     </div>
