--- a/src/Trace/views/postage/modal.html
+++ b/src/Trace/views/postage/modal.html
@@ -11,7 +11,7 @@
                 <div class="form-group form-md-line-input">
                     <label class="col-md-3 control-label">省份名称:</label>
                     <div class="col-md-9">
-                        <input type="text" class="form-control" ng-class="{'edited':vm.post.province}" placeholder="请输入省份名称" maxlength="120"
+                        <input type="text" class="form-control" readonly="" ng-class="{'edited':vm.post.province}" placeholder="请输入省份名称" maxlength="120"
                                required ng-model="vm.post.province">
                     </div>
                 </div>
