--- a/src/Trace/views/integralmall/record.html
+++ b/src/Trace/views/integralmall/record.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="views.integralmall.index as vm">
+﻿<div ng-controller="views.integralmall.record as vm">
     <div class="page-bar">
         <div class="col-xs-9">
             <ul class="page-breadcrumb">
