--- a/src/Trace/views/onlinemall/product/index.html
+++ b/src/Trace/views/onlinemall/product/index.html
@@ -13,6 +13,7 @@
                 <ul class="page-breadcrumb" style="float: right">
                     <li>
                         <button class="btn btn-sm blue" ng-click="vm.add()"><i class="fa fa-plus"></i> 添加</button>
+                        <button class="btn btn-sm blue" ng-click="vm.export()"><i class="fa fa-plus"></i> 导出</button>
                     </li>
                 </ul>
             </div>
@@ -94,15 +95,11 @@
                         <td>{{row.status==1?'有效':'无效'}}</td>
 
                         <td>
-                            <a href="#"  ng-click="vm.edit(row)" > 修改
-                            </a>
-                            <a ng-if="row.status==1" href="#"  ng-click="vm.outline(row,0)" >  下线
-                            </a>
-                            <a ng-if="row.status==0" href="#" ng-click="vm.outline(row,1)">
-                               上线
-                            </a>
-                            <a href="#"  ng-click="vm.delete(row)" >  删除
-                            </a>
+                            <a href="#"  ng-click="vm.edit(row)" > 修改</a>
+                            <a ng-if="row.status==1" href="#"  ng-click="vm.outline(row,0)" >  下线 </a>
+                            <a ng-if="row.status==0" href="#" ng-click="vm.outline(row,1)"> 上线 </a>
+                            <a href="#" ng-click="vm.delete(row)">  删除 </a>
+                            <a ng-if="row.is_badge==1" href="#"  ng-click="vm.dline(row)" >  纪念章下线 </a>
                         </td>
                     </tr>
                 </tbody>
