--- a/src/Trace/views/onlinemall/banner/modal.html
+++ b/src/Trace/views/onlinemall/banner/modal.html
@@ -21,7 +21,7 @@
                 <div class="form-group form-md-line-input">
                     <label class="col-md-3 control-label">URL:</label>
                     <div class="col-md-9">
-                        <input type="text" class="form-control" ng-class="{'edited':vm.shu.url}" placeholder="请输入URL地址" maxlength="120"
+                        <input type="url" class="form-control" ng-class="{'edited':vm.shu.url}" placeholder="请输入URL地址" maxlength="120"
                                required ng-model="vm.shu.url">
                     </div>
                 </div>
@@ -31,7 +31,7 @@
                 <div class="form-group form-md-line-input">
                     <label class="col-md-3 control-label">轮播权重:</label>
                     <div class="col-md-9">
-                        <input type="number" class="form-control" ng-class="{'edited':vm.shu.weight}" placeholder="请输入轮播权重" maxlength="120"
+                        <input type="number" ng-pattern="/^([1-9][0-9]*){1,9}$/"  class="form-control" ng-class="{'edited':vm.shu.weight}" placeholder="请输入轮播权重" maxlength="120"
                                required ng-model="vm.shu.weight">
                     </div>
                 </div>
