--- a/src/Trace/views/onlinemall/product/modify.html
+++ b/src/Trace/views/onlinemall/product/modify.html
@@ -86,7 +86,7 @@
                                     </div>
                                     <div class="tile-object">
                                         <div class="name"> 限制 </div>
-                                        <div class="number"> 100x100 </div>
+                                        <div class="number"> 150x150 </div>
                                     </div>
                                 </div>
                            
@@ -121,7 +121,7 @@
                             <div class="form-group form-md-line-input">
                                 <label class="col-md-3 control-label">商品价格:</label>
                                 <div class="col-md-9">
-                                    <input type="number" class="form-control"
+                                    <input type="number" ng-pattern="/^([1-9][0-9]*){1,9}$/"  class="form-control"
                                            ng-class="{'edited':vm.product.price}" placeholder="商品价格" 
                                            required ng-model="vm.product.price">
                                 </div>
@@ -134,7 +134,7 @@
                             <div class="form-group form-md-line-input">
                                 <label class="col-md-3 control-label">商品库存:</label>
                                 <div class="col-md-9">
-                                    <input type="number" class="form-control"
+                                    <input type="number" ng-pattern="/^([1-9][0-9]*){1,9}$/"  class="form-control"
                                            ng-class="{'edited':vm.product.inventory}" placeholder="商品库存" maxlength="120"
                                            required ng-model="vm.product.inventory">
                                 </div>
@@ -255,7 +255,7 @@
                                         </div>
                                         <div class="tile-object">
                                             <div class="name"> 限制 </div>
-                                            <div class="number"> 100x100 </div>
+                                            <div class="number"> 150x150 </div>
                                         </div>
                                     </div>
                                     <!--<ol>
