--- a/src/Trace/views/postage/index.html
+++ b/src/Trace/views/postage/index.html
@@ -50,9 +50,9 @@
                             <a href="#" ng-click="vm.edit(row)">
                                 修改
                             </a>
-                            <a href="#" ng-click="vm.delete(row)">
+                            <!--<a href="#" ng-click="vm.delete(row)">
                                 删除
-                            </a>
+                            </a>-->
                         </td>
                     </tr>
                 </tbody>
