--- a/src/Trace/views/statistical/gaintrace/index.html
+++ b/src/Trace/views/statistical/gaintrace/index.html
@@ -1,67 +1,66 @@
 ﻿<div ng-controller="views.statistical.gaintrace.index as vm">
     <div class="page-bar">
-        <div class="col-xs-9">
+        <div class="col-xs-8">
             <ul class="page-breadcrumb">
 
                 <li>
                     <i class="fa fa-hand-o-right"></i>
                     <a href="#">积分商城管理</a>
                 </li>
-                <li>
-                    <button ng-click="vm.add()"> 添加</button>
-                </li>
-            
             </ul>
         </div>
-        <div class="col-xs-3 right">
-            <ul class="page-breadcrumb" style="float:right">
+        <div class="col-xs-4 right">
+            <ul class="page-breadcrumb" style="float: right">
                 <li>
-
-                    <button ng-click="vm.export()"> 导出</button>
+                    <button class="btn btn-sm blue" ng-click="vm.add()"><i class="fa fa-plus"></i> 添加</button>
+                </li>
+                <li>
+                    <button class="btn btn-sm blue" ng-click="vm.export()"><i class="fa fa-plus"></i> 导出</button>
                 </li>
             </ul>
         </div>
 
-     
+
     </div>
     <div class="portlet light bordered">
         <div class="row">
-            <div class="col-xs-12 ">
-                <div class="col-xs-5">
-                    <div class="form-group form-md-line-input">
-                        <label class="col-md-3 control-label">商品名称</label>
-                        <div class="col-md-9">
-                            <input type="text" placeholder="商品名称"
-                                   ng-model="vm.table.filter.name">
-                        </div>
+            <div class="col-xs-3">
+                <div class="form-group form-md-line-input">
+                    <label class="col-md-4 control-label">状态</label>
+                    <div class="col-md-8">
+                        <select ng-model="vm.table.filter.status"
+                                class="form-control edited" ui-validate="'$value>0'"
+                                ng-class="{'edited':vm.table.filter.status>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                        <div class="form-control-focus"> </div>
                     </div>
                 </div>
-                <div class="col-xs-3">
-                    <div class="form-group form-md-line-input">
-                        <label class="col-md-4 control-label">状态</label>
-                        <div class="col-md-8">
-                            <select ng-model="vm.table.filter.state" ng-options="m.id as m.name for m in vm.filter.states"></select>
-                            <div class="form-control-focus"> </div>
-                        </div>
+            </div>
+            <div class="col-xs-3">
+                <div class="form-group form-md-line-input">
+                    <label class="col-md-4 control-label">类型</label>
+                    <div class="col-md-8">
+                        <select ng-model="vm.table.filter.cate" class="form-control edited" ui-validate="'$value>0'"
+                                ng-class="{'edited':vm.table.filter.cate>0}" ng-options="m.id as m.name for m in vm.filter.cates"></select>
+                        <div class="form-control-focus"> </div>
                     </div>
                 </div>
-                <div class="col-xs-3">
-                    <div class="form-group form-md-line-input">
-                        <label class="col-md-4 control-label" for="cate">类型</label>
-                        <div class="col-md-8">
-                            <select ng-model="vm.table.filter.cate" ng-options="m.id as m.name for m in vm.filter.cates"></select>
-                            <div class="form-control-focus"> </div>
+            </div>
+            <div class="col-xs-5">
+                <div class="form-group form-md-line-input has-info">
+                    <div class="input-group input-group-sm">
+                        <div class="input-group-control">
+                            <input type="text" class="form-control input-sm" placeholder="按条件搜索" ng-model="vm.table.filter.name">
                         </div>
+                        <span class="input-group-btn btn-right">
+                            <button ng-click="vm.init()" class="btn green-haze" type="button">查询</button>
+                        </span>
                     </div>
-                </div>
-                <div class="col-xs-1">
-                    <button ng-click="vm.init()"> 查询</button>
                 </div>
             </div>
 
         </div>
         <div class="row">
-            <table st-table="vm.table.data" class="table table-striped">
+            <table st-table="vm.table.rows" class="table table-striped">
                 <thead>
                     <tr>
                         <th st-sort="a">攻略名称</th>
@@ -74,23 +73,26 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.data">
-                        <td>{{row.a}}</td>
-                        <td>{{row.b}}</td>
-                        <td>{{row.c}}</td>
-                        <td>{{row.balance}}</td>
-                        <td>{{row.email}}</td>
-                        <td>{{row.email}}</td>
+                    <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.rows">
+                        <td>{{row.product_name}}</td>
+                        <td>{{row.online_time | timeChange}}</td>
+                        <td>{{row.product_price}}</td>
+                        <td>{{row.inventory}}</td>
+                        <td>{{row.product_type | arrayfilter:vm.filter.cates:row.product_type}}</td>
+                        <td>{{row.status==0?'下线':'上线'}}</td>
                         <td>
-                            <button type="button" ng-click="vm.modify(row)" class="btn btn-sm btn-default">
+                            <a href="#" ng-click="vm.edit(row)">
                                 修改
-                            </button>
-                            <button type="button" ng-click="vm.low(row)" class="btn btn-sm btn-warning">
-                                下架
-                            </button>
-                            <button type="button" ng-click="vm.delete(row)" class="btn btn-sm btn-danger">
+                            </a>
+                            <a ng-if="row.status==0" href="#" ng-click="vm.update(row,1)">
+                                上线
+                            </a>
+                            <a ng-if="row.status==1" href="#" ng-click="vm.update(row,0)">
+                                下线
+                            </a>
+                            <a href="#" ng-click="vm.delete(row)">
                                 删除
-                            </button>
+                            </a>
                         </td>
                     </tr>
                 </tbody>
