--- a/src/Trace/views/trace/modify.html
+++ b/src/Trace/views/trace/modify.html
@@ -12,7 +12,7 @@
         <form name="modalform" role="form" novalidate class="form-validation">
             <div class="modal-body">
                 <div class="row">
-                    <div class="col-xs-10">
+                    <div class="col-xs-8">
                         <div class="row">
                             <div class="col-xs-6">
                                 <div class="form-group form-md-line-input">
@@ -70,23 +70,27 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-2">
-                        <div class="tiles">
-                            <div class="tile bg-grey-steel-opacity" ng-file-select="vm.file.onFileSelect($files,1)" data-multiple="vm.file.multiple" onclick="this.value = null">
-                                <div class="tile-body">
-                                    <i class="fa fa-cloud-upload"></i>
-                                </div>
-                                <div class="tile-object">
-                                    <div class="name"> 限制 </div>
-                                    <div class="number"> 337x169 </div>
+                    <div class="col-xs-4">
+                        <div class="col-xs-4">
+                            <div class="tiles">
+                                <div class="tile bg-grey-steel-opacity" ng-file-select="vm.file.onFileSelect($files,1)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                                    <div class="tile-body">
+                                        <i class="fa fa-cloud-upload"></i>
+                                    </div>
+                                    <div class="tile-object">
+                                        <div class="name"> 限制 </div>
+                                        <div class="number"> 337x169 </div>
+                                    </div>
                                 </div>
                             </div>
-                            <!--<ol>
-                                <li ng-repeat="(k,v) in vm.file.selectFiles">
-                                    {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
-                                </li>
-                            </ol>-->
                         </div>
+                        <div ng-if="vm.file.model[1].url" class="col-xs-8">
+                            <div>
+                                <img ng-click="vm.file.remove(1)" style="width:337px;height:169px;" ng-if="vm.file.model[1].url" src="{{vm.file.model[1].url}}" alt="" />
+                            </div>
+
+                        </div>
+                      
                     </div>
                 </div>
                 <div class="row">
